# programming

AXIOM/: '  MOBILE_MENU_INSTRUCTIONS.md  index.html  package-lock.json  package.json
AXIOM/public/reports/: bog-monitoring-report-translation.md
AXIOM/public/videos/: working.mov
AXIOM/src/: App.css  App.tsx  index.css
AXIOM/src/components/: Carousel.css  Carousel.tsx  CarouselClient.tsx  Experience.css  Experience.tsx  GitEmailSection.css  GitEmailSection.tsx  Homepage.css  Homepage.tsx  LiquidTransition.css  LiquidTransition.tsx  MobileHero.css  MobileHero.tsx  MobileMenu.css  MobileMenu.tsx  PageTransitionOverlay.css  PageTransitionOverlay.tsx  ReportLanguagePopup.css  ReportLanguagePopup.tsx  SecretCommands.css  SecretCommands.tsx  ShellPreloader.css  ShellPreloader.tsx  Sidebar.css  Sidebar.tsx  SimpleEmailForm.css  SimpleEmailForm.tsx  TerminalLock.css  TerminalLock.tsx  ThemeToggle.css  ThemeToggle.tsx  icons.tsx
AXIOM/src/contexts/: PageTransitionContext.tsx  ThemeContext.tsx
AXIOM/src/data/: experiences.ts  projects.ts  tags.tsx
AXIOM/src/hooks/: usePageTransition.ts
AXIOM/src/lib/: utils.ts
FERRUM/: .gitignore  Makefile  README.md
FERRUM/include/: builtins.h  common.h  shell.h
FERRUM/include/containers/: vector.h
FERRUM/include/data/: aliases.h  bookmarks.h  favorite_cities.h  structured_data.h
FERRUM/include/git/: git_integration.h
FERRUM/include/history/: persistent_history.h
FERRUM/include/input/: autocorrect.h  line_reader.h  tab_complete.h
FERRUM/include/search/: filters.h  fzf_native.h  grep.h  ripgrep.h
FERRUM/include/system/: system_monitor.h
FERRUM/include/ui/: diff_viewer.h  ncurses_diff_viewer.h  themes.h
FERRUM/include/utils/: countdown_timer.h  timer.h
FERRUM/src/: builtins.c  main.c  shell.c
FERRUM/src/containers/: vector.c
FERRUM/src/data/: aliases.c  bookmarks.c  favorite_cities.c  structured_data.c
FERRUM/src/git/: git_integration.c
FERRUM/src/history/: persistent_history.c
FERRUM/src/input/: autocorrect.c  line_reader.c  tab_complete.c
FERRUM/src/search/: filters.c  fzf_native.c  grep.c  ripgrep.c
FERRUM/src/system/: ps_command.c  system_monitor.c
FERRUM/src/ui/: diff_viewer.c  ncurses_diff_viewer.c  themes.c
FERRUM/src/utils/: countdown_timer.c  timer.c  weather.c
N-BODY-PROBLEM-SOLUTION/: 3-Body-Problem-Forklaring.ipynb  testing.py  threeBodyProblem.py
c++/anthropicInterview/: main  main.cpp
c++/c++primer/: Sales_item.h  a.out  exercise1.cpp  if_statement  if_statement.cpp  narrowing  narrowing.cpp  prog2  prog2.cpp  read-pdf.sh  test  test.cpp  while  while.cpp  while2  while2.cpp
c++/sdl/: CMakeLists.txt  Window.h  main.cpp
c++/testing/: assigment.cpp  assign  bruh  bruh.cpp  escape  escape_sequences.cpp  extern.cpp  hello  hello.cpp  initializers  initializers.cpp  main  main.cpp  pointer_literals.cpp  sales_item.h  scope  scope.cpp  something  something.cpp  sometthing.cpp  string_literal.cpp  string_literals  testing  testing.cpp  type  type_conversion.cpp  types  types.cpp  vec  vec.cpp
cuda/: a.out  hello  hello_world.cu  something  something.cu  test  testing.cu  vec  vec.cu
cuda/pong/: index.html.1  pong  pong.cu
nyra/: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.adoc  TODO.org  bacon.toml  flake.nix  nyra.example.toml
nyra/.helix/: config.toml  languages.toml
nyra/crates/nyra/: Cargo.toml  build.rs
nyra/crates/nyra/src/: arg_parser.rs  main.rs
nyra/crates/nyra_commands/: Cargo.toml
nyra/crates/nyra_commands/src/: helper.rs  lib.rs
nyra/crates/nyra_commands/src/information/: age.rs  help.rs  mod.rs
nyra/crates/nyra_commands/src/information/host/: host_helper.rs  linux.rs  macos.rs  mod.rs  tests.rs  unknown.rs  windows.rs
nyra/crates/nyra_commands/src/moderation/: ban.rs  kick.rs  mod.rs  purge.rs  unban.rs
nyra/crates/nyra_commands/src/utilities/: mod.rs  ping.rs
nyra/crates/nyra_core/: Cargo.toml
nyra/crates/nyra_core/src/: config.rs  lib.rs
nyra/crates/nyra_gui/: Cargo.toml  LICENSE.txt  README.adoc
nyra/crates/nyra_gui/src/: lib.rs  theme.rs
nyra/crates/nyra_utils/: Cargo.toml
nyra/crates/nyra_utils/src/: colorize.rs  lib.rs  log.rs
nyra/crates/poise/: Cargo.toml  README.adoc
nyra/crates/poise/src/: choice_parameter.rs  cooldown.rs  lib.rs  modal.rs  track_edits.rs
nyra/crates/poise/src/builtins/: help.rs  mod.rs  paginate.rs  pretty_help.rs  register.rs
nyra/crates/poise/src/dispatch/: common.rs  mod.rs  prefix.rs  slash.rs
nyra/crates/poise/src/framework/: builder.rs  mod.rs
nyra/crates/poise/src/prefix_argument/: argument_trait.rs  code_block.rs  key_value_args.rs  macros.rs  mod.rs
nyra/crates/poise/src/reply/: builder.rs  mod.rs  send_reply.rs
nyra/crates/poise/src/slash_argument/: context_menu.rs  into_stream.rs  slash_macro.rs  slash_trait.rs
nyra/crates/poise/src/structs/: command.rs  context.rs  framework_error.rs  framework_options.rs  mod.rs  prefix.rs  slash.rs
nyra/crates/poise_macros/: Cargo.toml
nyra/crates/poise_macros/src/: choice_parameter.rs  lib.rs  modal.rs  util.rs
nyra/crates/poise_macros/src/command/: mod.rs  prefix.rs  slash.rs
nyra/docs/development/: terminal.adoc  troubleshooting.adoc
nyra/docs/setup/: configuration.adoc  dependencies.adoc
rust/ANVIL/: Cargo.toml
rust/ANVIL/.cargo/: config.toml
rust/ANVIL/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
rust/ANVIL/src/allocator/: fixed_size_block.rs
rust/ANVIL/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
rust/backyard/src/: main.rs
rust/backyard/src/garden/: vegetables.rs
rust/bollle/: Cargo.toml
rust/bollle/src/: main.rs
rust/hello/: Cargo.toml
rust/hello/src/: main.rs
rust/learning/src/: main.rs
rust/learningdebug/: Cargo.toml
rust/learningdebug/src/: main.rs
rust/project_claude/: Cargo.toml  README.md
rust/project_claude/src/: main.rs
rust/project_gemini/: Cargo.toml  history.txt
rust/project_gemini/src/: main.rs
rust/rustlings/exercises/02_functions/: functions1.rs
(+12 files in other folders)
