[workspace]
resolver = "2"
members = [
  "crates/poise",
  "crates/nyra"
]
default-members = ["crates/nyra"]

[workspace.dependencies]
tracing-subscriber = "0.3.18"
trim-in-place = "0.1.7"
intl-memoizer = "0.5.1"
proc-macro2 = "1.0.24"
fluent-syntax = "0.11"
parking_lot = "0.12.1"
inventory = "0.3.21"
derivative = "2.2.0"
crossterm = "0.29.0"
indexmap = "2.2.6"
chrono = "0.4.42"
serde = "1.0.228"
fluent = "0.16.0"
darling = "0.20"
quote = "1.0.9"
rand = "0.8.5"
toml = "0.9.8"
wmi = "0.17.3"

[workspace.dependencies.async-trait]
version = "0.1.48"
default-features = false

[workspace.dependencies.futuargoes]
version = "0.3.13"
default-features = false

[workspace.dependencies.futures]
version = "0.3.13"
default-features = false

[workspace.dependencies.futures-util]
version = "0.3.13"
default-features = false

[workspace.dependencies.gpui]
version = "0.2.2"
features = ["runtime_shaders"]

[workspace.dependencies.nyra-commands]
path = "crates/nyra_commands"

[workspace.dependencies.nyra-core]
path = "crates/nyra_core"

[workspace.dependencies.nyra-gui]
path = "crates/nyra_gui"

[workspace.dependencies.nyra-utils]
path = "crates/nyra_utils"

[workspace.dependencies.poise]
path = "crates/poise"

[workspace.dependencies.poise_macros]
path = "crates/poise_macros"
version = "0.6.1"

[workspace.dependencies.regex]
version = "1.6.0"
default-features = false
features = ["std"]

[workspace.dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
version = "0.12.4"

[workspace.dependencies.syn]
version = "2"
features = ["fold"]

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["rt", "macros", "rt-multi-thread", "sync", "signal"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[workspace.package]
publish = false
edition = "2024"
