[package]
name = "project_gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rustyline handles the heavy lifting for line editing, history, and completion
rustyline = { version = "14.0", features = ["derive"] }
# For parsing command lines (handling quotes like "echo 'hello world'")
shell-words = "1.1"
# To accurately find the home directory across OSs
home = "0.5"
# For coloring the prompt
colored = "2.0"
