[[bin]]
name = "nyra"
path = "src/main.rs"

[dependencies]
nyra-utils.workspace = true
crossterm.workspace = true
inventory.workspace = true
nyra-core.workspace = true
chrono.workspace = true
poise.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true

[dependencies.nyra-gui]
workspace = true
optional = true

[features]
default = ["gui"]
gui = ["nyra-gui"]
cli = []
only-gui = ["gui"]
only-cli = ["cli"]

[package]
name = "nyra"
version = "1.2.0"
description = "A discord bot"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
