[dependencies]
chrono.workspace = true
inventory.workspace = true
nyra-utils.workspace = true
poise.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true

[package]
name = "nyra-commands"
version = "1.2.0"
description = "Bot commands for Nyra"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
